--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,63 +1,69 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-name: Lint & Test
+name: Run Tests
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - main
+
+permissions:
+  contents: read
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "^1"
+      - name: Setup golangci-lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.1.6
+          args: --verbose
+  test:
+    needs: lint
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        go: ["1.23", "1.24"]
+        include:
+          - os: ubuntu-latest
+            go-build: ~/.cache/go-build
+          - os: macos-latest
+            go-build: ~/Library/Caches/go-build
+    name: ${{ matrix.os }} @ Go ${{ matrix.go }}
+    runs-on: ${{ matrix.os }}
+    env:
+      GO111MODULE: on
+      GOPROXY: https://proxy.golang.org
+    steps:
+      - name: Set up Go ${{ matrix.go }}
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+          cache: false
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
 
-    - name: Run gofmt
-      run: |
-        gofmt -s -l . | tee .gofmt.log
-        test `cat .gofmt.log | wc -l` -eq 0
-        rm .gofmt.log
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ${{ matrix.go-build }}
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
-    - name: Run govet
-      run: go vet ./...
-
-    - name: Run golint
-      run: |
-        golint ./... | tee .golint.log
-        test `cat .golint.log | wc -l` -eq 0
-        rm .golint.log
-
-    - name: Run golangci-lint
-      # You may pin to the exact commit or the version.
-      # uses: golangci/golangci-lint-action@08e2f20817b15149a52b5b3ebe7de50aff2ba8c5
-      uses: golangci/golangci-lint-action@v3.4.0
-      with:
-        # version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
-        version: latest # optional
-        # # golangci-lint command line arguments
-        # args: # optional, default is
-        # # golangci-lint working directory, default is project root
-        # working-directory: # optional
-        # # the token is used for fetching patch of a pull request to show only new issues
-        # github-token: # optional, default is ${{ github.token }}
-        # # if set to true and the action runs on a pull request - the action outputs only newly found issues
-        # only-new-issues: # optional
-        # # if set to true then the all caching functionality will be complete disabled, takes precedence over all other caching options.
-        # skip-cache: # optional
-        # # if set to true then the action doesn't cache or restore ~/go/pkg.
-        # skip-pkg-cache: # optional
-        # # if set to true then the action doesn't cache or restore ~/.cache/go-build.
-        # skip-build-cache: # optional
-
-    # - name: Build
-    #   run: go build -v ./...
-
-    - name: Test
-      run: go test -v -coverprofile=coverage.txt -covermode=atomic ./...
+      - name: Run Tests
+        run: make test
