ci: add Codecov integration for code coverage reporting
- Add .codecov.yml configuration file
  - Set coverage precision and range (70-100%)
  - Configure project and patch coverage thresholds
  - Enable coverage comments on PRs
  - Ignore test files and examples

- Update GitHub Actions workflow
  - Add codecov/codecov-action@v5 step
  - Upload coverage.txt after tests
  - Only upload from ubuntu-latest to avoid duplicates
  - Use CODECOV_TOKEN secret for authentication

This enables automatic coverage reporting on PRs and commits,
making it easier to track test coverage changes.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -67,3 +67,13 @@ jobs:
 
       - name: Run Tests
         run: make test
+
+      - name: Upload coverage to Codecov
+        if: matrix.os == 'ubuntu-latest'
+        uses: codecov/codecov-action@v5
+        with:
+          file: ./coverage.txt
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
