fix: exclude examples directory from code coverage reports
This commit addresses the discrepancy between local coverage (57.3%) and
actual code coverage (90.6%) by properly excluding the examples directory
from coverage reports.

Changes:
- Makefile: Add post-test filtering to remove examples/ from coverage.txt
- GitHub Workflow: Add dedicated filtering step before Codecov upload
- .gitignore: Add patterns to ignore temporary coverage files
  (coverage*.txt, coverage*.html, coverage*.out)

Impact:
- Coverage reports now accurately reflect actual code coverage (~90%)
  instead of including untested example code
- Aligns with existing .codecov.yml ignore configuration
- Temporary coverage files no longer tracked in git

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -68,6 +68,16 @@ jobs:
       - name: Run Tests
         run: make test
 
+      - name: Filter coverage to exclude examples
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          if [ -f coverage.txt ]; then
+            grep -v "examples/" coverage.txt > coverage_filtered.txt || true
+            if [ -s coverage_filtered.txt ]; then
+              mv coverage_filtered.txt coverage.txt
+            fi
+          fi
+
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest'
         uses: codecov/codecov-action@v5
